@@ -67,7 +67,6 @@ ivtools-1.0/config/config.defs.in
 ivtools-1.0/config/config.mk
 ivtools-1.0/config/config.null.mk
 ivtools-1.0/config/darwin-gcc.mk
-ivtools-1.0/config/darwin-gcc.mk
 ivtools-1.0/config/default-gcc.mk
 ivtools-1.0/config/freebsd-gcc.mk
 ivtools-1.0/config/freebsd2.1-gcc.mk
@@ -1553,6 +1552,7 @@ ivtools-1.0/src/include/ivstd/nan.h
 ivtools-1.0/src/include/ivstd/osfcn.h
 ivtools-1.0/src/include/ivstd/signal.h
 ivtools-1.0/src/include/ivstd/stdio.h
+ivtools-1.0/src/include/ivstd/stdlib.h
 ivtools-1.0/src/include/ivstd/stream.h
 ivtools-1.0/src/include/ivstd/string.h
 ivtools-1.0/src/include/ivstd/version.h
